--- a/package.json
+++ b/package.json
@@ -60,10 +60,13 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "remix-auth": "^4.1.0",
+    "remix-auth-form": "^3.0.0",
     "remix-themes": "^1.6.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tiny-invariant": "^1.3.3",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
