--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "isbot": "^4.1.0",
     "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.14.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "redis": "^4.7.0",
     "remix-auth": "^4.1.0",
     "remix-auth-form": "^3.0.0",
     "remix-themes": "^1.6.1",
