add deploy script command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-    "test:db": "node test-db.cjs"
+    "test:db": "node test-db.cjs",
+    "deploy": "./scripts/deploy.sh"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
